<resources>
    <string name="app_name">BmiApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="bmi">BMI Calculator</string>
    <string name="weight">WEIGHT</string>
    <string name="weight_lowercase">Weight</string>
    <string name="height">Height</string>
    <string name="click">CLICK</string>
    <string name="clear">CLEAR</string>
    <string name="enter">ENTER</string>
    <string name="bmi_calculator">BMI CALCULATOR</string>
</resources>